# gesture_AI

./: .env_example  .gitignore  Dockerfile  README.MD  augment_noise.py  collect.py  config.py  dtloader.py  hello.json  inference.py  main.py  model.py  normalize.py  preprocess.py  pyproject.toml  test.ipynb  train.py  validation.ipynb
.github/workflows/: deploy.yml
notebook/: convert.ipynb
notebooks/: convert.ipynb  hello.json  validation.ipynb
router/: cc.py  cc_stt.py  health.py  root.py  summary.py
schema/: subtitleSchema.py
util/: bigruClassifier.py  config.py  csvBuild.py  labels.py  loadLogger.py  loadMessage.py  mongo_connect.py  ssl_config.py
util/npyConvertUtil/: keypoints.py  parseMorpheme.py  videoProcessing.py
util/service/: cc_service.py
util/trainUtil/: signDatasetUtil.py  signTransformerUtil.py
