[project]
name = "gesture-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "openai>=2.30.0",
    "openai-whisper>=20250625",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
    "torch==2.5.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
